[tool.poetry]
name = "trailhead-api"
version = "0.1.0"
description = "A simple API to retrieve public Salesforce Trailhead data."
authors = ["Aaron George <angeorge.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
trailhead-scraper = "^0.1.0"
gunicorn = "^20.0.4"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
